--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -91,9 +91,9 @@ form {
     padding: 0 $space-s;
 }
 
-.fx__torn {
-    clip-path: polygon(0 1%, 13% 5%, 23% 2%, 30% 4%, 38% 2%, 48% 0%, 53% 5%, 60% 9%, 68% 4%, 79% 7%, 90% 2%, 96% 5%, 100% 7%, 100% 95%, 92% 100%, 87% 98%, 75% 96%, 65% 98%, 56% 100%, 48% 97%, 35% 100%, 22% 96%, 18% 100%, 13% 99%, 0 96%);
-}
+// .fx__torn {
+//     clip-path: polygon(0 1%, 13% 5%, 23% 2%, 30% 4%, 38% 2%, 48% 0%, 53% 5%, 60% 9%, 68% 4%, 79% 7%, 90% 2%, 96% 5%, 100% 7%, 100% 95%, 92% 100%, 87% 98%, 75% 96%, 65% 98%, 56% 100%, 48% 97%, 35% 100%, 22% 96%, 18% 100%, 13% 99%, 0 96%);
+// }
 
 strong {
     color: $accent;
@@ -322,12 +322,13 @@ small {
 }
 
 .bg__dark {
+    transition: $time-ms;
     background-color: $primary;
 }
 
 .bg__light {
-    background-color: $secondary;
-
+    transition: $time-ms;
+    background-color: $secondary-tint;
     color: $primary;
 }
 
