--- a/css/main.css
+++ b/css/main.css
@@ -74,10 +74,6 @@ form .submit {
   padding: 0 5em;
 }
 
-.fx__torn {
-  clip-path: polygon(0 1%, 13% 5%, 23% 2%, 30% 4%, 38% 2%, 48% 0%, 53% 5%, 60% 9%, 68% 4%, 79% 7%, 90% 2%, 96% 5%, 100% 7%, 100% 95%, 92% 100%, 87% 98%, 75% 96%, 65% 98%, 56% 100%, 48% 97%, 35% 100%, 22% 96%, 18% 100%, 13% 99%, 0 96%);
-}
-
 strong {
   color: hsl(348, 100%, 34%);
 }
@@ -259,11 +255,13 @@ small {
 }
 
 .bg__dark {
+  transition: 1s;
   background-color: hsl(0, 0%, 9%);
 }
 
 .bg__light {
-  background-color: hsl(45, 23%, 90%);
+  transition: 1s;
+  background-color: hsl(45, 23%, 100%);
   color: hsl(0, 0%, 9%);
 }
 
@@ -540,13 +538,7 @@ section.timeline .fx__revealIn {
   height: calc(100% + 150px);
   transform: translateY(-75px);
 }
-section.timeline .timeline__shadow {
-  filter: drop-shadow(0 35px 0px hsl(45, 23%, 90%)) drop-shadow(0 -35px 0px hsl(45, 23%, 90%)) drop-shadow(0 25px 0px hsl(45, 23%, 75%)) drop-shadow(0 -25px 0px hsl(45, 23%, 75%)) drop-shadow(0 15px 0px hsl(0, 0%, 24%)) drop-shadow(0 -15px 0px hsl(0, 0%, 24%));
-  width: 100%;
-  height: 100%;
-}
 section.timeline .fx__torn {
-  background-color: hsl(45, 23%, 100%);
   padding: 7em 0;
 }
 section.timeline .container {
@@ -574,7 +566,6 @@ section.timeline .timeline__timeline {
   --event-width: 22.5vw;
   --event-height: 30ch;
   display: flex;
-  mask-image: linear-gradient(90deg, hsl(0, 0%, 9%) 75%, rgba(22.95, 22.95, 22.95, 0.2) 94%, transparent 100%);
   overflow-x: hidden;
 }
 section.timeline .timeline__timeline > * {
